--- a/plague-legacy/export_presets.cfg
+++ b/plague-legacy/export_presets.cfg
@@ -77,10 +77,10 @@ application/console_wrapper_icon=""
 application/icon_interpolation=4
 application/file_version=""
 application/product_version=""
-application/company_name=""
-application/product_name=""
+application/company_name="domain76"
+application/product_name="Plague Legacy"
 application/file_description=""
-application/copyright=""
+application/copyright="2024"
 application/trademarks=""
 application/export_angle=0
 application/export_d3d12=0
